# .dotfiles

./: .aliases  .clang-format  .exports  .gitconfig  .gitignore  .gitmodules  .p10k.zsh  .profile  .purepower  .tmux.conf  .tudu.xml  .zprofile  .zshrc  LICENSE  README.md  TODOs  alacritty.toml  alacritty.yml  bookmarks_03_12_2020.html  dunstrc  lfrc  package_list.txt  picom.conf  starship.toml  vifmrc  zathurarc
MangoHud/: MangoHud.conf
clangd/: config.yaml
dunst/: dunstrc
fend/: config.toml
ghostty/: config
i3/: config  i3sizemode
i3blocks/: config
i3cmds/: ddspawn  dmenuunicode  dropdowncalc  i3resize  prompt
i3status-rust/: config.toml
lf/: lfrc
mpv/: input.conf  mpv.conf
mpv/script-opts/: mpv_thumbnail_script.conf
mpv/scripts/: autosave.lua  modernx.lua  thumbfast.lua
nvim/: .init.vim  coc-settings.json  init.lua  init.vim  qtcreator.vim
nvim/lua/: keybinds.lua  lsp.lua  options.lua  plugin_setups.lua  plugins.lua  treesitter.lua
nvim/plugin/: packer_compiled.lua
nvim/syntax/: meson.vim
paru/: paru.conf
polybar/: config.ini
rio/: config.toml
rustfmt/: rustfmt.toml
scripts/: .clang-tidy  Emoji  MIT  Tupfile  Tuprules.tup  Weather  _tlp_perf  _tlp_power  activitywatcher  autoscript  battery  c-create  c-makefile  cdterm  center_mouse  clock  color  color.c  colpri  compiler  cpp-create  cpp-gitignore  cpp-makefile  cpp-project  cpu-heat  cpufreq  datetime  dmenuunicode  download-mp3  emoji  en-tr  enter_unicode  getSize  getsong  git-trunc  i3resize  launch  launch-emacs-then-quit  lock  lsdir  (+59 more)
statusbar/: battery-plus  clock  memory  volume
sway/: config
wezterm/: wezterm.lua
yazi/: init.lua  keymap.toml  package.toml  yazi.toml
zellij/: config.kdl  config.yaml
zsh-plugins/: git.zsh  vi-mode.plugin.zsh
